[gd_scene load_steps=4 format=3 uid="uid://3ku2jxix1xnr"]

[ext_resource type="Script" path="res://ui/menu.gd" id="1_0f630"]
[ext_resource type="AudioStream" uid="uid://bsk4gtjyxmxf2" path="res://assets/sounds/Fromage - Steven O'Brien (Must Credit, CC-BY, www.steven-obrien.net).mp3" id="2_xcg2t"]
[ext_resource type="Texture2D" uid="uid://d0v57ek3kfc07" path="res://assets/menu_background.png" id="3_oepf2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0f630")

[node name="MenuBackground" type="Sprite2D" parent="."]
position = Vector2(950, 525)
texture = ExtResource("3_oepf2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -213.0
offset_bottom = 53.0
grow_horizontal = 0

[node name="Music" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Music"

[node name="HSlider" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2
min_value = -25.0
max_value = 25.0

[node name="SFX" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "SFX"

[node name="HSlider2" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2
min_value = -25.0
max_value = 25.0

[node name="background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_xcg2t")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.217
anchor_right = 0.5
anchor_bottom = 0.217
offset_left = -273.0
offset_top = -33.36
offset_right = 1.0
offset_bottom = -0.360016
grow_horizontal = 2
scale = Vector2(2, 2)
text = "THE SLUSHIEST SLIME"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="VBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/HSlider2" to="." method="_on_h_slider_2_value_changed"]
